frontend/src/sass/components/_nav.scss
.navbar {
  display: grid;
  grid-template:
    "b a a" 1fr
    "b c c" 1fr / 1fr 2fr;
  z-index: 1;
  height: 100px;
  padding-top: 10px;
  width: 100%;
  // top: 0;
  // left: 0;
  // right: 0;
  background-color: $bgColor7;

  img {
    height: 80px;
  }

  .menu-navbar {
    li {
      margin: 0 2px 0 10px;
    }
  }
}

// .allNavBar,
// .logo,
// .navbar {
//   border: 1px solid black;
// }

.logo {
  margin-left: 20px;
  display: flex;
  align-items: flex-start;
  justify-content: flex-start;
}

.all-menu-navbar {
  margin-right: 20px;
  // top: 0;
  // right: 0;
  // bottom: 0;
}

.allNavBar {
  display: flex;
  justify-content: flex-start;
  align-items: flex-end;
  flex-direction: column;
  margin-right: 20px;
  width: 100%;
  height: 100%;
  // border: 1px solid black;
}

.subCategory {
  li {
    padding: calc(10px + 1vmin) calc(15px + 1vmin);
  }

  h1 {
    // text-align: center;
    padding-bottom: 20px;
  }

  .category {
    padding: 15px 20px 0 20px;
    position: relative;
    height: 50px;
    // margin: 0 auto;
  }
}

